config-root/cluster/resources/jx/jx-pipelines-visualizer/jx-pipelines-visualizer-ingress.yaml
# Source: jx-pipelines-visualizer/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jx-pipelines-visualizer
  labels:
    app.kubernetes.io/name: jx-pipelines-visualizer
    app.kubernetes.io/instance: "jx-pipelines-visualizer"
    helm.sh/chart: jx-pipelines-visualizer-1.8.2
    app.kubernetes.io/version: "1.8.2"
    app.kubernetes.io/managed-by: "Helm"
    gitops.jenkins-x.io/pipeline: 'cluster'
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-realm: Authentication Required - Jenkins X Pipeline Dashboard
    nginx.ingress.kubernetes.io/auth-secret: jx-basic-auth-htpasswd
    nginx.ingress.kubernetes.io/auth-type: basic
    meta.helm.sh/release-name: 'jx-pipelines-visualizer'
spec:
  rules:
    - host: dashboard-jx.mycluster-dal10-b3-863626-560f6f5e338640cda943b314d2536ac3-0000.us-south.containers.appdomain.cloud
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: jx-pipelines-visualizer
                port:
                  name: http
